bad/assign_var_class_class_down.example_compiler_output
ERROR
[1mbad/assign_var_class_class_down.lat:7:4: [1;31merror: [0;1massigning to `Y` from incompatible type `X`[m
	x = new X;
	  [1;32m^[m
